demo-virtualization-portal/base/gitlab/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    app.kubernetes.io/part-of: virt-portal
