demo-virtualization-portal/base/gitlab/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/part-of: virt-portal
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: gitlab
