demo-virtualization-portal/base/gitlab/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
    app.kubernetes.io/name: gitlab
    app.kubernetes.io/part-of: virt-portal
spec:
  host: gitlab.__BASE_DOMAIN__
  to:
    kind: Service
    name: gitlab
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
